# dividindo-as-dividas

./: manage.py  mkdocs.yml  pyproject.toml
core/: views.py
core/templates/: index2.html
dividindo_as_dividas/: asgi.py  settings.py  wsgi.py
