[tool.poetry]
name = "dividindo-as-dividas"
version = "0.1.0"
description = ""
authors = ["JanioAbrantes <janioabrantes@gmail.com>"]
readme = "README.md"
packages = [{include = "dividindo_as_dividas"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.4"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.2"
mkdocstrings-python = "^0.9.0"
mkdocs-material = "^9.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
